--- a/app/styles/components/hero.scss
+++ b/app/styles/components/hero.scss
@@ -5,7 +5,7 @@
   min-height: 100vh;
   width: 100%;
   overflow: hidden;
-  background: #000;
+  background: $bg-base;
   display: flex;
   align-items: center;
   justify-content: center;
